# problem_solving

./: .gitignore  CMakeLists.txt  absolute_permutation  absolute_permutation.cpp  data
absolute_permutation/: CMakeLists.txt  absolute_permutation.cpp  data
crosses/: CMakeLists.txt  crosses.cpp  data
